--- a/06-issuer.yaml
+++ b/06-issuer.yaml
@@ -4,7 +4,7 @@ metadata:
   name: letsencrypt
 spec:
   acme:
-    email: tony@persea.ca
+    email: YOUR EMAIL ADDRESS HERE
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Secret resource that will be used to store the account's private key.
